<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/welcomeMessage"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_30sdp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:backgroundTint="@color/black"
            android:padding="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_1sdp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_margin="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterCityName"
                app:errorTextColor="@android:color/holo_red_light"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/cityEt"
                    android:gravity="center"
                    android:hint="@string/enterCityName"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="@dimen/_14sdp"
                    android:layout_height="wrap_content">



                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>




        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/startBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:text="@string/go"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>


